--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -3,13 +3,18 @@
   .item{
     width: 100%;
     height: 160px;
-    padding: 10px;
+    padding: 10px 20px;
     background: #6ec7e9;
     border-radius: 6px;
     line-height: 140px;
     Text{
       font-size: 64px;
       color:#fff;
+    }
+    .play-btn{
+      float: right;
+      background: transparent;
+      border:none;
     }
   }
 }
