--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -1,20 +1,26 @@
 .index{
   padding: 40px;
   .item{
+    display: block;
     width: 100%;
     height: 160px;
     padding: 10px 20px;
     background: #6ec7e9;
     border-radius: 6px;
     line-height: 140px;
-    Text{
+    margin-bottom:20px;
+    overflow: hidden;
+    .word{
       font-size: 64px;
+      color:#fff;
+      font-weight: bold;
+    }
+    .desc{
+      font-size: 24px;
       color:#fff;
     }
     .play-btn{
       float: right;
-      background: transparent;
-      border:none;
     }
   }
 }
