--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -7,21 +7,30 @@
     padding: 10px 20px;
     background: #6ec7e9;
     border-radius: 6px;
-    line-height: 140px;
     margin-bottom:20px;
     overflow: hidden;
-    .word{
-      font-size: 64px;
-      color:#fff;
-      font-weight: bold;
+    .text{
+      float: left;
+      .word{
+        font-size: 70px;
+        color:#fff;
+        font-weight: bold;
+        line-height: 100px;
+      }
+      .desc{
+        display: block;
+        font-size: 24px;
+        color:#fff;
+        line-height: 30px;
+      }
     }
-    .desc{
-      font-size: 24px;
-      color:#fff;
-    }
+
     .play-btn{
       float: right;
     }
   }
+}
+.updateKey{
+  display: none;
 }
 
